# vis_taskbar

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  installer.iss  installer.nsi
.github/workflows/: ci.yml  release.yml
fft_spectrum/: fft_spectrum.cpp  fft_spectrum.h  fft_spectrum.sln  fft_spectrum.vcxproj  fft_spectrum.vcxproj.filters  kiss_fft.h  kiss_fft_spectrum.cpp  kiss_fft_spectrum.h  kiss_fftr.c
foobar2000/foobar2000/foo_vis_taskbar/: foo_vis_taskbar.cpp  foo_vis_taskbar.h  foo_vis_taskbar.rc  foo_vis_taskbar.sln  foo_vis_taskbar.vcxproj  foo_vis_taskbar.vcxproj.filters  main.cpp  resource.h
src/: audio.rs  config.rs  main.rs  renderer.rs  spectrum.rs  taskbar.rs  tray.rs  ui.rs
vis_taskbar/: vis_taskbar.sln
vis_taskbar/vis_taskbar/: dllmain.cpp  resource.h  vis_taskbar.cpp  vis_taskbar.h  vis_taskbar.rc  vis_taskbar.vcxproj  vis_taskbar.vcxproj.filters
vis_taskbar_common/: vis_taskbar_common.cpp  vis_taskbar_common.h  vis_taskbar_common.sln  vis_taskbar_common.vcxproj  vis_taskbar_common.vcxproj.filters
vis_taskbar_rs/: Cargo.toml
vis_taskbar_rs/src/: config.rs  taskbar.rs
win7_vis_taskbar/: win7_vis_taskbar.sln
win7_vis_taskbar/win7_vis_taskbar/: main.cpp  resource.h  win7_vis_taskbar.cpp  win7_vis_taskbar.h  win7_vis_taskbar.rc  win7_vis_taskbar.vcxproj  win7_vis_taskbar.vcxproj.filters
