[package]
name = "vis_taskbar"
version = "0.1.0"
edition = "2024"
description = "Audio spectrum visualizer rendered on the Windows taskbar"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_Graphics_Dwm",
    "Win32_System_Console",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
] }
rustfft = "6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true

[build-dependencies]
winresource = "0.1"
